--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,7 @@
+variables:
+    HOME: /home/gitlab-runner
+    BUILD_NAME: backend
+
 stages:
     - print
     - build
@@ -11,7 +15,7 @@ print_message:
 build:dev:
     stage: build
     script:
-        - cp docker-compose.yaml Dockerfile .
+        # - cp docker-compose.yaml Dockerfile .
         - docker-compose up --build
 
 run_tests:
