--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ redis = "^5.0.7"
 pytest-django = "^4.8.0"
 pytz = "^2024.1"
 drf-yasg = "^1.21.7"
+setuptools = "^72.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
