--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ cache:
         - .pip-cache/
 
 before_script:
-    - pip install --no-cache-dir "poetry==${POETRY_VERSION}"
+    - pip install --no-cache-dir poetry
     - poetry config virtualenvs.create false
     - poetry install
 
