--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,18 @@
 image: python:3.12
 
-services:
-    - postgres:latest
-
 variables:
     DJANGO_SETTINGS_MODULE: "core.settings.testing"
     PYTHONUNBUFFERED: "1"
+    POETRY_VERSION: 1.6.1
 
 cache:
     paths:
         - .pip-cache/
 
 before_script:
-    - pip install -r requirements.txt
+    - pip install --no-cache-dir "poetry==$POETRY_VERSION"
+    - poetry config virtualenvs.create false
+    - poetry install
 
 stages:
     - test
@@ -20,6 +20,6 @@ stages:
 test:
     stage: test
     script:
-        - pytest
+        - poetry run pytest --disable-warnings
     artifacts:
         when: always
