--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ cache:
 
 before_script:
     - pip install --no-cache-dir "poetry==$POETRY_VERSION"
-    - poetry shell
+    - poetry config virtualenvs.create false
     - poetry install
 
 stages:
