--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,7 @@ stages:
 test:
     stage: test
     script:
+        - cd application
         - poetry run pytest --disable-warnings
     artifacts:
         when: always
