--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = application.core.settings.testing
+DJANGO_SETTINGS_MODULE = core.settings.testing
 python_files = tests.py test_*.py *_tests.py
