--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,8 @@ test:
     stage: test
     script:
         - cd application
-        - python manage.py migrate --run-syncdb
+        - python manage.py makemigrations
+        - python manage.py migrate
         - poetry run pytest --disable-warnings
     artifacts:
         when: always
