--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,6 +1,9 @@
 [uwsgi]
 chdir=/code/
-module=application.wsgi:application
+module=core.wsgi:application
 master=True
 socket=/code/socket.sock
 http=:8000
+static-map = /static=/code/static
+static-expires = /* 7776000
+offload-threads = %k
