--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -4,6 +4,6 @@ module=core.wsgi:application
 master=True
 socket=/code/socket.sock
 http=:8000
-static-map = /static=/code/static
-static-expires = /* 7776000
-offload-threads = %k
+; static-map = /static=/code/static
+; static-expires = /* 7776000
+; offload-threads = %k
