--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,6 @@ test:
     script:
         - cd application
         - python3.12 manage.py makemigrations
-        - poetry3.12 run pytest --disable-warnings
+        - python3.12 run pytest --disable-warnings
     artifacts:
         when: always
