--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ test:
         - pip install -r requirements.txt
     script:
         - cd application
+        - python3.12 manage.py makemigrations
         - python3.12 -m pytest --disable-warnings
     artifacts:
         when: always
